add version define for `com.nk7.container`

--- a/src/StateMachine/Runtime/Nk7.StateMachine.asmdef
+++ b/src/StateMachine/Runtime/Nk7.StateMachine.asmdef
@@ -12,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.nk7.container",
+            "expression": "1.0.0",
+            "define": "NK7_CONTAINER"
+        }
+    ],
     "noEngineReferences": false
 }
