update package info

--- a/src/StateMachine/package.json
+++ b/src/StateMachine/package.json
@@ -6,8 +6,8 @@
     "com.cysharp.unitask": "2.3.0"
   }, 
   "author": {
-    "name": "Nk7", 
-    "url": "https://github.com/lsd7nk"
+    "name": "lsd7nk",
+    "url": "https://github.com/s-elovikov"
   }, 
   "keywords": [
     "FSM",
